<resources>
    <string name="app_name">Woof</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="spay_neuter">Spayed/Neutered</string>
    <string name="kids">Good With Kids</string>
    <string name="housebroken">Housebroken</string>
    <string name="other_animals">Good With Other Animals</string>
    <string name="profile">Profile</string>

    <string name="back_button">&#xf060;</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Both</item>
        <item>Female</item>
    </string-array>

    <string-array name="yes_no_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="other_animals_array">
        <item>Cats</item>
        <item>Dogs</item>
        <item>Both</item>
        <item>No</item>
    </string-array>
</resources>
