<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="goBack"
            android:text="@string/back_button"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="150"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/age_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/gender" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                mstb:mstbPrimaryColor="@color/light_grey"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                mstb:values="@array/gender_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/spay_neuter" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/spay_neuter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                mstb:mstbPrimaryColor="@color/light_grey"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                mstb:values="@array/yes_no_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/housebroken" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/housebroken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                mstb:mstbPrimaryColor="@color/light_grey"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                mstb:values="@array/yes_no_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/kids" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/kids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                mstb:mstbPrimaryColor="@color/light_grey"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                mstb:values="@array/yes_no_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/other_animals" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/other_animals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                mstb:mstbPrimaryColor="@color/light_grey"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                mstb:values="@array/yes_no_array" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>